# ir2425_group_07_assignment2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  global_camera.rviz  global_map.rviz  package.xml
include/ir2425_group_07_assignment2/: collision_detector.h  const_dimension.h  pick_n_place.h  utilities.h  waypoint_generator.h
launch/: project.launch
src/: arm_move.cpp  collision_detector.cpp  detection.cpp  nodeA.cpp  pick_n_place.cpp  point_line_server.cpp  utilities.cpp  waypoint_generator.cpp  waypoint_navigation.cpp
srv/: collision_add_service.srv  collision_rem_service.srv  point_line.srv  srvArm.srv  waypoint_service.srv
